[tool.poetry]
name = "lit-data-layers"
version = "0.1.0"
description = "A collection of data layers for Chainlit, persist state on your own infrastructure!"
authors = ["Aniruddha Adhikary"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.0.401"


[tool.poetry.group.sqldb.dependencies]
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
