[tool.poetry]
name = "lit-data-layers"
version = "0.1.0"
description = "A collection of data layers for Chainlit, persist state on your own infrastructure!"
authors = ["Aniruddha Adhikary"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.0.401"

psycopg2 = { version = "^2.9.9", optional = true }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiosqlite = { version = "^0.20.0", optional = true }


[tool.poetry.extras]
postgres = ["psycopg2", "sqlalchemy"]
sqlite = ["aiosqlite", "sqlalchemy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
